fixed overflow of text on filenames in the index page

--- a/public/less/app.less
+++ b/public/less/app.less
@@ -1040,7 +1040,8 @@ button {
   text-overflow: ellipsis;
   white-space: nowrap;
   font-weight: 500;
-  padding-top: 5px;
+  padding-top: 3px;
+  padding-bottom: 2px;
 }
 
 #scroller li .inner .light {
